<resources>
    <string name="app_name" translatable="false">MagicApp</string>
    <string name="strAddCard">Add card</string>
    <string name="str_addDeck">Add deck</string>
    <string name="strAddNewCollection">Add New Collection</string>
    <string name="strAddCardToCollection">Add Card to Collection</string>
    <string name="strEditDeck">Edit deck</string>
    <string name="strAdd">Add</string>
    <string name="strDel">Delete</string>
    <string name="strSave">Save</string>
    <string name="strClose">Close</string>
    <string name="str_deck_name">Deck name</string>
    <string name="str_deck_description">Deck description</string>
    <string name="str_edit_deck_save">Save deck</string>
    <string name="strCollectionName">Collection\'s name</string>
    <string name="strCollectionPanel">Collection Panel</string>
    <string name="strCollectionPanelCards">Collection\'s Cards</string>
    <string name="image_card_content_description">Card Image</string>
    <string name="image_section_content_description">Section Image</string>
    <string name="magic_title" translatable="false">Magic</string>
    <string name="random_card_title">Random Card</string>
    <string name="cd_save_card">Save the card\'s image into app storage</string>
    <string name="refresh">Refresh</string>
    <string name="cd_refresh">Refresh the content with a new random card</string>
    <string name="fab_flip">Flip card</string>
    <string name="magic" translatable="false">Magic</string>
    <string name="random_card">Random</string>
    <string name="name_title">Name</string>
    <string name="type_line_title">Type</string>
    <string name="oracle_text_title">Oracle text</string>
    <string name="set_name_title">Set</string>
    <string name="legality_title">Legality</string>
    <string name="legality_content">Explore the different ways to play Magic, from Standard to Commander and beyond.</string>
    <string name="image_legality_content_description">Legality Image</string>
    <string name="standard" translatable="false">Standard</string>
    <string name="future" translatable="false">Future</string>
    <string name="historic" translatable="false">Historic</string>
    <string name="timeless" translatable="false">Timeless</string>
    <string name="gladiator" translatable="false">Gladiator</string>
    <string name="pioneer" translatable="false">Pioneer</string>
    <string name="explorer" translatable="false">Explorer</string>
    <string name="modern" translatable="false">Modern</string>
    <string name="legacy" translatable="false">Legacy</string>
    <string name="pauper" translatable="false">Pauper</string>
    <string name="vintage" translatable="false">Vintage</string>
    <string name="penny" translatable="false">Penny</string>
    <string name="commander" translatable="false">Commander</string>
    <string name="oathbreaker" translatable="false">Oathbreaker</string>
    <string name="standardbrawl" translatable="false">Standard Brawl</string>
    <string name="brawl" translatable="false">Brawl</string>
    <string name="alchemy" translatable="false">Alchemy</string>
    <string name="paupercommander" translatable="false">Pauper Commander</string>
    <string name="duel" translatable="false">Duel</string>
    <string name="oldschool" translatable="false">Old School</string>
    <string name="premodern" translatable="false">Premodern</string>
    <string name="predh" translatable="false">PreDH</string>
    <string name="keyword_title">Keywords</string>
    <string name="keyword_content">Learn the meaning of the keywords in the Magic: The Gathering universe.</string>
    <string name="image_keyword_content_description">Keyword Image</string>
    <string name="filters_content_description">Search filters</string>
    <string name="search_title">Search</string>
    <string name="search_results_title">Search Results</string>
    <string name="button_select_colors">Seleccionar colores</string>
    <string name="label_select_colors">Seleccione colores</string>
    <string name="previous_page">Previous page</string>
    <string name="next_page">Next page</string>
    <string name="pagination_bar">Pagination bar</string>
    <string name="search_results_add">Add…</string>
    <string name="str_searchByCardsName">Search by card name</string>
    <string name="search_name_label">Search name</string>
    <string name="type">Type</string>
    <string name="types">Types</string>
    <string name="type_spell">Spell</string>
    <string name="type_artifact">Artifact</string>
    <string name="type_battle">Battle</string>
    <string name="type_conspiracy">Conspiracy</string>
    <string name="type_creature">Creature</string>
    <string name="type_dungeon">Dungeon</string>
    <string name="type_enchantment">Enchantment</string>
    <string name="type_instant">Instant</string>
    <string name="type_kindred">Kindred</string>
    <string name="type_land">Land</string>
    <string name="type_phenomenon">Phenomenon</string>
    <string name="type_plane">Plane</string>
    <string name="type_planeswalker">Planeswalker</string>
    <string name="type_scheme">Scheme</string>
    <string name="type_sorcery">Sorcery</string>
    <string name="type_vanguard">Vanguard</string>
    <string-array name="types_options">
        <item>@string/type_artifact</item>
        <item>@string/type_battle</item>
        <item>@string/type_conspiracy</item>
        <item>@string/type_creature</item>
        <item>@string/type_dungeon</item>
        <item>@string/type_enchantment</item>
        <item>@string/type_instant</item>
        <item>@string/type_kindred</item>
        <item>@string/type_land</item>
        <item>@string/type_phenomenon</item>
        <item>@string/type_plane</item>
        <item>@string/type_planeswalker</item>
        <item>@string/type_scheme</item>
        <item>@string/type_sorcery</item>
        <item>@string/type_vanguard</item>
    </string-array>
    <string name="rarity">Rarity</string>
    <string name="rarities">Rarities</string>
    <string name="rarity_common">Common</string>
    <string name="rarity_uncommon">Uncommon</string>
    <string name="rarity_rare">Rare</string>
    <string name="rarity_mythic">Mythic</string>
    <string-array name="rarities_options">
        <item>@string/rarity_common</item>
        <item>@string/rarity_uncommon</item>
        <item>@string/rarity_rare</item>
        <item>@string/rarity_mythic</item>
    </string-array>
    <string name="color" translatable="false">Color</string>
    <string name="colors">Colors</string>
    <string name="color_white">White</string>
    <string name="color_blue">Blue</string>
    <string name="color_black">Black</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_colorless">Colorless</string>
    <string-array name="colors_options">
        <item>@string/color_white</item>
        <item>@string/color_blue</item>
        <item>@string/color_black</item>
        <item>@string/color_red</item>
        <item>@string/color_green</item>
        <item>@string/color_colorless</item>
    </string-array>
    <string name="q_rarity_common" translatable="false">common</string>
    <string name="q_rarity_uncommon" translatable="false">cncommon</string>
    <string name="q_rarity_rare" translatable="false">rare</string>
    <string name="q_rarity_mythic" translatable="false">mythic</string>
    <string-array name="q_rarities_options">
        <item>@string/q_rarity_common</item>
        <item>@string/q_rarity_uncommon</item>
        <item>@string/q_rarity_rare</item>
        <item>@string/q_rarity_mythic</item>
    </string-array>
    <string name="q_color_white" translatable="false">white</string>
    <string name="q_color_blue" translatable="false">blue</string>
    <string name="q_color_black" translatable="false">black</string>
    <string name="q_color_red" translatable="false">red</string>
    <string name="q_color_green" translatable="false">green</string>
    <string name="q_color_colorless" translatable="false">colorless</string>
    <string-array name="q_colors_options">
        <item>@string/q_color_white</item>
        <item>@string/q_color_blue</item>
        <item>@string/q_color_black</item>
        <item>@string/q_color_red</item>
        <item>@string/q_color_green</item>
        <item>@string/q_color_colorless</item>
    </string-array>
    <string name="q_type_artifact" translatable="false">Artifact</string>
    <string name="q_type_battle" translatable="false">Battle</string>
    <string name="q_type_conspiracy" translatable="false">Conspiracy</string>
    <string name="q_type_creature" translatable="false">Creature</string>
    <string name="q_type_dungeon" translatable="false">Dungeon</string>
    <string name="q_type_enchantment" translatable="false">Enchantment</string>
    <string name="q_type_instant" translatable="false">Instant</string>
    <string name="q_type_kindred" translatable="false">Kindred</string>
    <string name="q_type_land" translatable="false">Land</string>
    <string name="q_type_phenomenon" translatable="false">Phenomenon</string>
    <string name="q_type_plane" translatable="false">Plane</string>
    <string name="q_type_planeswalker" translatable="false">Planeswalker</string>
    <string name="q_type_scheme" translatable="false">Scheme</string>
    <string name="q_type_sorcery" translatable="false">Sorcery</string>
    <string name="q_type_vanguard" translatable="false">Vanguard</string>
    <string-array name="q_types_options">
        <item>@string/q_type_artifact</item>
        <item>@string/q_type_battle</item>
        <item>@string/q_type_conspiracy</item>
        <item>@string/q_type_creature</item>
        <item>@string/q_type_dungeon</item>
        <item>@string/q_type_enchantment</item>
        <item>@string/q_type_instant</item>
        <item>@string/q_type_kindred</item>
        <item>@string/q_type_land</item>
        <item>@string/q_type_phenomenon</item>
        <item>@string/q_type_plane</item>
        <item>@string/q_type_planeswalker</item>
        <item>@string/q_type_scheme</item>
        <item>@string/q_type_sorcery</item>
        <item>@string/q_type_vanguard</item>
    </string-array>
    <string name="str_CardLabel">Card</string>
    <string name="image_error_content_description">Error Image</string>
    <string name="error_button_retry">Retry</string>
    <string name="loremt_title" translatable="false">Lorem ipsum dolor</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_small" translatable="false">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="str_legalFormats">Legal Formats</string>
    <string name="str_decks">Decks</string>
    <string name="str_collections">Collections</string>
    <string name="str_legalFormatsContentDescription">List of legal formats</string>
    <string name="str_keywordsContentDescription">List of keywords in cards</string>
    <string name="str_decksListContentDescription">List of user\'s decks</string>
    <string name="str_collectionsListContentDescription">List of user\'s collections</string>
    <string name="str_deckPanelContentDescription">List of deck\'s cards</string>
    <string name="str_newCollection">New Collection</string>
    <string name="str_btnCreateNewDeck">Create Deck</string>
</resources>