<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    style="@style/st_cointainer_item_fit">

    <ImageView
        android:id="@+id/smallCardImage"
        style="@style/st_image_small"
        android:contentDescription="@string/image_card_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textCardCopies"
        style="@style/st_textCardCopies"
        app:layout_constraintEnd_toStartOf="@+id/btnAddCardCopy"
        app:layout_constraintStart_toEndOf="@+id/btnDelCardCopy"
        app:layout_constraintBottom_toBottomOf="@id/btnDelCardCopy"
        app:layout_constraintTop_toTopOf="@+id/btnDelCardCopy"
        tool:text="4" />

    <ImageView
        android:id="@+id/btnDelCardCopy"
        style="@style/st_btnDelCardCopy"
        android:contentDescription="@string/strDel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnAddCardCopy"
        style="@style/st_btnAddCardCopy"
        android:contentDescription="@string/strAdd"
        app:layout_constraintBottom_toBottomOf="@id/btnDelCardCopy"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>