<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/app_section_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/app_legalities_item_image"
        style="@style/app_section_list_icon"
        android:layout_width="@dimen/section_icon_s"
        android:layout_height="@dimen/section_icon_s"
        android:contentDescription="@string/image_legality_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/magic" />

    <TextView
        android:id="@+id/app_legalities_item_term"
        style="@style/app_section_list_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/app_legalities_item_image"
        app:layout_constraintTop_toTopOf="@id/app_legalities_item_image"
        tools:text="@string/legality_title" />

    <TextView
        android:id="@+id/app_legalities_item_description"
        style="@style/app_section_list_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/app_legalities_item_term"
        app:layout_constraintTop_toBottomOf="@id/app_legalities_item_term"
        tools:text="@string/legality_content" />
</androidx.constraintlayout.widget.ConstraintLayout>
