<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/style_view_common_section_list_type_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/view_common_section_list_type_icon"
        style="@style/style_view_common_section_list_type_icon"
        android:contentDescription="@string/image_section_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/magic" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/view_common_section_list_type_title"
        style="@style/style_view_common_section_list_type_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_common_section_list_type_icon"
        app:layout_constraintTop_toTopOf="@id/view_common_section_list_type_icon"
        tools:text="@string/loremt_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/view_common_section_list_type_content"
        style="@style/style_view_common_section_list_type_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/view_common_section_list_type_title"
        app:layout_constraintTop_toBottomOf="@id/view_common_section_list_type_title"
        tools:text="@string/lorem_small" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>