<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/st_cointainer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newDeckForm"
        style="@style/st_cointainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/newDeckNameLabel"
            style="@style/st_edit_label"
            android:text="@string/str_deck_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/newDeckName"
            style="@style/st_edit_input"
            android:autofillHints="no"
            android:hint="@string/str_deck_name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@id/newDeckNameLabel"
            app:layout_constraintStart_toStartOf="@id/newDeckNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/newDeckNameLabel"
            tools:text="@string/str_deck_name" />

        <!-- DECK DESCRIPTION -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/newDeckDescriptionLabel"
            style="@style/st_edit_label"
            android:text="@string/str_deck_description"
            app:layout_constraintEnd_toEndOf="@id/newDeckName"
            app:layout_constraintStart_toStartOf="@id/newDeckName"
            app:layout_constraintTop_toBottomOf="@+id/newDeckName" />

        <EditText
            android:id="@+id/newDeckDescription"
            style="@style/st_edit_input"
            android:autofillHints="no"
            android:hint="@string/str_deck_description"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@id/newDeckDescriptionLabel"
            app:layout_constraintStart_toStartOf="@id/newDeckDescriptionLabel"
            app:layout_constraintTop_toBottomOf="@+id/newDeckDescriptionLabel"
            tools:text="@string/str_deck_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_createNewDeck"
            style="@style/stButton"
            android:text="@string/str_btnCreateNewDeck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newDeckDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <pol.rubiano.magicapp.app.presentation.error.AppErrorView
        android:id="@+id/app_error_view_container"
        style="@style/st_app_error_view_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
