<?xml version="1.0" encoding="utf-8"?>
<com.faltenreich.skeletonlayout.SkeletonLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/random_card_skeleton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/random_card_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_card_content_description"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/card_back" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/flip_button"
                style="?attr/floatingActionButtonSurfaceStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fab_flip"
                android:layout_marginEnd="@dimen/dimen_l"
                android:src="@drawable/flip"
                app:layout_constraintTop_toTopOf="@id/random_card_image"
                app:layout_constraintEnd_toEndOf="@id/random_card_image"
                app:layout_constraintBottom_toBottomOf="@id/random_card_image"/>

            <!-- Name -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/name_title"
                style="@style/AppTitleForCardMini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/random_card_image" />

            <TextView
                android:id="@+id/random_card_name"
                style="@style/AppTextCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_title"
                tools:text="@string/name_title" />

            <!-- Type Line -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/type_line_title"
                style="@style/AppTitleForCardMini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_line_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/random_card_name" />

            <TextView
                android:id="@+id/random_card_tipe_line"
                style="@style/AppTextCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type_line_title"
                tools:text="@string/type_line_title" />

            <!-- Rarity -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/rarity_title"
                style="@style/AppTitleForCardMini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rarity_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/random_card_tipe_line" />

            <TextView
                android:id="@+id/random_card_rarity"
                style="@style/AppTextCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rarity_title"
                tools:text="@string/rarity_title" />

            <!-- Oracle Text -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/oracle_text_title"
                style="@style/AppTitleForCardMini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oracle_text_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/random_card_rarity" />

            <TextView
                android:id="@+id/random_card_oracle_text"
                style="@style/AppTextCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oracle_text_title"
                tools:text="oracle text" />

            <!-- Set Name -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/set_name_title"
                style="@style/AppTitleForCardMini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_name_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/random_card_oracle_text" />

            <TextView
                android:id="@+id/random_card_set_name"
                style="@style/AppTextCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/set_name_title"
                tools:text="set name" />

            <!-- Legalities -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/legalities_title"
                style="@style/AppTitleForCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legalities_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/random_card_set_name" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/legalities_list"
                style="@style/AppLegalitiesContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/legalities_title"
                tools:listitem="@layout/legalities_item_view" />

            <pol.rubiano.magicapp.app.presentation.error.AppErrorView
                android:id="@+id/errorApp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</com.faltenreich.skeletonlayout.SkeletonLayout>